Redis feature implemented